# croncalc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  cov.sh  cov_gcovr.sh  cov_lcov.sh  travis.sh  travis.yml
src/: cron_calc.c  cron_calc.cpp  cron_calc.h  cron_calc.hpp
test/: codecov.yaml  cron_calc_test.cpp
